
        Also try out create_makefile_pl => "passthrough" in Build.PL

        Minor fixes to tests to make them work with newest UseMod formatter.

	Prevented "Edit this page" from showing up on category indexes.

	Set TT "POST_CHOMP" option to strip unnecessary newlines from HTML.

        Fixed CPAN bug #3085 - quotes in change summary box.

0.21    17 July 2003
        We no longer autogenerate a Makefile.PL, since it doesn't pick up
        all the questions that need to be asked.  Sorry.  Use Module::Build
        as detailed in INSTALL, since you won't be able to get the right
        version of Text::WikiFormat installed without it in any case.

        Added version number to CGI.pm prereq as Alex McLintock hit a
        version that didn't have unescape.

        Added a link on RecentChanges to the RSS version, and put an
        autodiscovery tag for the RSS in the head section.

	Changed diff feature to hide checksums, which aren't necessary for 
        the user to see. Fixed a minor bug in the node history template so
        that the diff links compare the selected version against the previous
        one, not the original one every time.

0.20    10 July 2003
        Fixed all the email addresses to openguides-dev@openguides.org.

0.19    10 July 2003
        Extra checks that script_url ends in a '/'.

        Fixed small bug with edit conflict form - map link field was missing.

        Moved "content" div in a couple of templates to fix incorrect nesting. 

        @INDEX_LINK macros now have optional title text like so:
          @INDEX_LINK [[Category Pubs|Pubs]]

        Added preferences option for including or excluding text formatting
        rules link in navbar.  Enable this by setting text_formatting_node
        in your config file.

        Added config option for including the navbar on the home page.

        Implemented minor edits.

        Fixed cookie to persist beyond session.

0.18    16 June 2003